# Trajectory-Tracking-MPC

./: README.md  patch_script.py  patch_script2.py  patch_script_3.py  patch_smooth.py
devel/: .catkin
devel/lib/path_planning/: path_manager_node  sensing_node
devel/lib/persistence/: db
devel/lib/pkgconfig/: alglib_pkg.pc  communication.pc  localization.pc  path_planning.pc  persistence.pc  utils.pc
devel/share/alglib_pkg/cmake/: alglib_pkgConfig.cmake
devel/share/communication/cmake/: communicationConfig.cmake
src/planning_wsthanh/: 2head_lat.xlsx  2head_lat_steer.xlsx  2head_lat_steer_second.xlsx  2head_steer.xlsx  2head_steer_second.xlsx  2only_head.xlsx  2only_head_second.xlsx  2only_head_third.xlsx  cost_bamduong0.xlsx  cost_energy0.xlsx  cost_full_ham.xlsx  cost_only_w_head.xlsx  cost_only_w_lat.xlsx  gamma_0.05.xlsx  gamma_0.05_colech.xlsx  gamma_0.05_colech_second.xlsx  gamma_0.1_colech.xlsx  gamma_0.2.xlsx  gamma_0.2_colech.xlsx  gamma_0.5.xlsx  radius_0.3.2.xlsx  radius_0.3.xlsx  radius_0.4.2.xlsx  radius_0.4.xlsx  radius_0.5.xlsx  radius_0.55.xlsx
src/planning_wsthanh/devel/: .catkin  local_setup.sh
src/planning_wsthanh/src/localization/: CMakeLists.txt  localization_plot.py
src/planning_wsthanh/src/localization/config/: localization.yaml
src/planning_wsthanh/src/localization/launch/: localization.launch
src/planning_wsthanh/src/path_planning/: CMakeLists.txt
src/planning_wsthanh/src/path_planning/include/path_planning/planning/: PathManager.h
src/planning_wsthanh/src/path_planning/include/path_planning/utils/: Sensing.h  SerialBridge.h
src/planning_wsthanh/src/path_planning/launch/: master.launch
src/planning_wsthanh/src/path_planning/src/: mit_convergence_plotter.py  mit_perf_analyzer.py  path_manager_node.cpp  trajectory_plotter_mac.py
src/planning_wsthanh/src/path_planning/src/persistence/: bicycle_model_check.py  mpc_convergence_plotter.py  mpc_visualizer.py  planner.py  plot_ablation_study.py  plot_comparison.py  plot_gamma_study.py  plot_perf.py  runs.yaml  save_gamma_data.py  save_run_data.py  save_run_data_cost.py  track.graphml
src/planning_wsthanh/src/path_planning/src/planning/: PathPlanner.cpp
src/planning_wsthanh/src/path_planning/src/utils/: sensing_node.cpp
(+25 files in other folders)
